<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoosePhotoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:layout_centerHorizontal="true"/>
    
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profile_photo"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload"
        android:text="@string/upload"
        android:layout_below="@+id/profile_photo"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finish"
        android:text="@string/finish"
        android:layout_below="@+id/upload"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>